--- a/package.json
+++ b/package.json
@@ -3,7 +3,11 @@
   "version": "1.0.0",
   "description": "Webpack Assessment",
   "main": "index.js",
-  "scripts": {},
+  "scripts": {
+    "build": "webpack --config=webpack.config.prod.js",
+    "build-dev": "webpack --config=webpack.config.dev.js",
+    "start": "webpack-dev-server --config=webpack.config.dev.js --hot --open"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Melbrian/webpack-assessment.git"
